tests/functional/data/transpiler/common/errors/barrier/applied_to_decl.err
applied_to_decl.cpp:6:13: error: 'barrier' attribute only applies to empty statements
    6 |             @barrier int i = 12;;
      |             ^
